# league_of_battles_user_lambda

./: .gitignore  Cargo.toml
src/: main.rs
src/lib/: config.rs  home.rs  lib.rs  models.rs
src/lib/dal/: users.rs
src/lib/models/: match_model.rs  team_model.rs  user_model.rs
src/lib/service/: users_service.rs
