[package]
name = "league_of_battles_user_lambda"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.
[lib]
name = "lib"
path = "src/lib/lib.rs"

[dependencies]
lambda_http = "0.7"
lambda_runtime = "0.7"
serde = "1.0.158"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
chrono = "0.4.24"
lazy_static = "1.4.0"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_26"] }
aws-config = "0.55.1"
aws-sdk-dynamodb = "0.26.0"
dotenv = "0.15.0"
reqwest = "0.11.14"
url = "2.3.1"
serde_json = "^1"
openssl-sys = "0.9.83"
openssl = { version = "0.10.48", features = ["vendored"] }

[profile.release]
debug = true
